--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 serde_json = "1.0.138"
+toml = "0.7.6"
 sha1 = "0.10.6"
 wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }
 serde = { version = "1.0", features = ["derive"] }
