--- a/assets/children/fs-chat.toml
+++ b/assets/children/fs-chat.toml
@@ -1,6 +1,7 @@
 name = "fs chat"
 description = "Provides filesystem operations like reading, writing, and listing files"
 component_path = "/Users/colinrozzi/work/actors/fs-child/target/wasm32-unknown-unknown/release/fs_child.wasm"
+init_data = "/Users/colinrozzi/work/actors/chat/assets/children/chat.json"
 
 [interface]
 implements = "ntwk:theater/actor"
@@ -12,4 +13,4 @@ config = {}
 
 [[handlers]]
 type = "filesystem"
-config = { path = "/Users/colinrozzi/work/theater"}
+config = { path = "/Users/colinrozzi/work/actors/chat"}
