feat(config): add store handler to actor configuration

--- a/actor.toml
+++ b/actor.toml
@@ -17,6 +17,10 @@ type = "filesystem"
 config = { path = "/Users/colinrozzi/work/actors/chat/assets"}
 
 [[handlers]]
+type = "store"
+config = {}
+
+[[handlers]]
 type = "http-framework"
 config = {}
 
