--- a/assets/children/chat-assets-virt-fs-child.toml
+++ b/assets/children/chat-assets-virt-fs-child.toml
@@ -1,8 +1,8 @@
-name = "virtual filesytem child"
+name = "chat assets virtual filesytem child"
 version = "0.1.0"
-description = "virtualized filesystem child actor for chat"
+description = "virtualized filesystem child actor for chat assets"
 component_path = "/Users/colinrozzi/work/actors/virt-fs-child/target/wasm32-unknown-unknown/release/virt_fs_child.wasm"
-init_data = "/Users/colinrozzi/work/actors/virt-fs-child/assets/init.json"
+init_state = "/Users/colinrozzi/work/actors/chat/assets/children/chat-virt-fs-child.json"
 
 [interface]
 implements = "ntwk:theater/single-actor"
